# ChangeLog for app-xemacs/prog-modes
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/prog-modes/ChangeLog,v 1.30 2011/07/22 11:25:01 xarthisius Exp $

*prog-modes-2.31 (08 Jul 2014)

  08 Jul 2014; Mats Lidell <matsl@gentoo.org> +prog-modes-2.31.ebuild:
  Pre release version bump.

*prog-modes-2.29 (17 Jul 2013)

  17 Jul 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml,
  +prog-modes-2.29.ebuild:
  Upstream experimental version bump and use EAPI=5
