@@ -1,2 +1,1 @@
-DIST prog-modes-2.29-pkg.tar.gz 858391 SHA256 c3d5d8511e7cdae6bbd912dc75a46ac0868d2cac2166cf0cc80c3a9ecb729fe9 SHA512 27f00e84308a2f31494491bb73841b922a3b2f0c2f153a71bde7277cbd06f1d396a5ededdec768c4e14fb71c787faeb476555d53aebaa265495e3bd0ed0bf6ff WHIRLPOOL a9af239243413fc3c477a9cda3c8efa20bbe1198778cadaf6c3d82e7de78c1ef66a9ab34317aebb5203beb38adce05dd670aa31a4e5ffc38997b27d597307b27
-DIST prog-modes-2.31-pkg.tar.gz 858654 SHA256 0a0c6d863bead6bd5bf71f319fcf8eeec76bf3e0555da88052ebf15d83bb11d2 SHA512 8de5b02d873dbfeb1dfe976160dfe29aca62da5238f4a1b7e42a897b6ceb52cbfcdac93edc4f17f6ac4ec3372e5a4b94e838f1db559d48fcec8e02a3e3eb442b WHIRLPOOL 1760048ed171d68976be4133a7f6e52c40872cef05561d34d3fe24e5933feb9e732c48e0fd56a8bdb5d0451bd621b4351279f35199b30af0e41664b71604d2ea
+DIST prog-modes-2.32-pkg.tar.gz 880803 SHA256 bd7ac8c66e2e73dd7dfe48dffc52657e180f5fd079f6a02d16ab09ff71f3578d SHA512 ae485a4cd7124beaec20025d982860360fdd377c6fa9c617872a4942f3eede4f5137de468b879d48c602c6bd44a2cb62e091685db49096de2cf9fdd0abf8f756 WHIRLPOOL 97f9e71f375ed383b240ee2d23a0c40e8cb45123b5b7a79e2e945a0c0122fc03b9a52d8a4c571ae142a848ac91967e5c938d3641745b8bcf62b7c6c4d15cf10b
