@@ -1,6 +1,12 @@
 # ChangeLog for app-xemacs/prog-modes
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/prog-modes/ChangeLog,v 1.30 2011/07/22 11:25:01 xarthisius Exp $
+
+*prog-modes-2.32 (12 Oct 2015)
+
+  12 Oct 2015; Mats Lidell <matsl@gentoo.org> -prog-modes-2.29.ebuild,
+  -prog-modes-2.31.ebuild, +prog-modes-2.32.ebuild:
+  Upstream prerelease version bump.
 
 *prog-modes-2.31 (08 Jul 2014)
 
